# barbacoa

./: .gitignore  .travis.yml  README.rst  pyproject.toml  pytest.ini
.github/: wip.yml
barbacoa/: __init__.py
barbacoa/hub/: dirs.py  exc.py  loader.py  struct.py
barbacoa/hub/mods/tools/: loop.py  pinger.py  test.py
barbacoa/plugins/: dirs.py  scanner.py  struct.py
barbacoa/plugins/mods/tools/: config.py  loop.py  pack.py  task.py
barbacoa/queues/: sqlite.py
barbacoa/storage/: sqlite.py
barbacoa/tasks/: test.py
tests/: Dockerfile  config.toml  conftest.py
tests/unit/: test_hub.py
